# EGLRender

./: CMakeLists.txt  Config.cmake.in  README.md
include/EGLRender/: cu_graphics_gl.h  egl_error.h  egl_platform.h  egl_render_manager.h  egl_renderer.h  egl_surface.h  gl_camera.h  gl_element_buffer.h  gl_shader.h  gl_vbo.h  native_window_event_handler.h  uniform_camera_matrix.h
shaders/: GeneralizedQuadrics_fs.glsl  GeneralizedQuadrics_vs.glsl
shaders/uniform/: camera.glsl
src/: cu_graphics_gl.cpp  egl_error.cpp  egl_platform.cpp  egl_render_manager.cpp  egl_renderer.cpp  egl_surface.cpp  egl_x11.cpp  gl_camera.cpp  gl_element_buffer.cpp  gl_enums.hxx  gl_shader.cpp  gl_vbo.cpp  native_window_event_handler.cpp  uniform_camera_matrix.cpp
tests/: CMakeLists.txt  egl_cugraphics.cu  egl_simple_camera.cpp  egl_test.cpp
